04-argocd-apps/linkding/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: linkding
  namespace: linkding
  annotations:
    external-dns.alpha.kubernetes.io/hostname: linkding.akna.one.pl
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-api
  hostnames:
    - linkding.akna.one.pl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkding
          port: 9090
